# Learn_python_web

./: .gitignore  create_admin.py  pyproject.toml  python_org_news.py  readme.md  requirements.txt  server.py  tasks.py  weather.py
migrations/versions/: 83a07a6139b7_users_and_news_tables.py  e0d8139aa018_comments_model.py  ff1703015038_added_email_to_user_model.py
templates/: index.html
webapp/: __init__.py  __main__.py  app.py  db.py  forms.py  model.py  python_org_news.py  utils.py  weather.py
webapp/admin/: views.py
webapp/news/: forms.py  models.py  views.py
webapp/news/parsers/: habr.py  utils.py
webapp/static/: style.css
webapp/templates/: base.html  index.html  login.html  menu.html
webapp/templates/admin/: index.html
webapp/templates/news/: index.html  single_news.html
webapp/templates/user/: login.html  registration.html
webapp/user/: decorators.py  forms.py  models.py  views.py
