[tool.poetry]
name = "learn_python_web"
version = "0.1.0"
description = ""
authors = ["Valexandrin <alex-vadim@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.10.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
click = "8.0.4"
colorama = "0.4.4"
Flask = "2.0.3"
Flask-Login = "0.5.0"
Flask-SQLAlchemy = "2.5.1"
greenlet = "1.1.2"
idna = "3.3"
itsdangerous = "2.1.0"
Jinja2 = "3.0.3"
MarkupSafe = "2.1.0"
psycopg2-binary = "2.9.3"
python-dotenv = "0.19.2"
requests = "2.27.1"
soupsieve = "2.3.1"
SQLAlchemy = "1.4.31"
urllib3 = "1.26.8"
Werkzeug = "2.0.3"
WTForms = "3.0.1"
Flask-Migrate = "^3.1.0"
Flask-WTF = "^1.0.0"
email-validator = "^1.1.3"
celery = {extras = ["redis"], version = "^5.2.6"}
eventlet = "^0.33.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
